[package]
authors = ["DEIP world <https://github.com/DEIPworld>"]
description = "FRAME pallet defined generic Proposal developed by DEIP"
edition = "2018"
homepage = "https://deip.world/"
license = "Apache-2.0"
name = "pallet-deip-proposal"
repository = "https://github.com/DEIPworld/deip-polkadot"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

deip-storage-ops = { path = "../../deip_common/deip_storage_ops", default-features = false }
deip-transaction-ctx = { path = "../../deip_common/deip_transaction_ctx", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false, optional = true }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"], optional = true }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "codec/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std", 
    "sp-runtime/std",
    "sp-core/std", 
    "sp-io/std", 
    "pallet-timestamp/std",
    "deip-storage-ops/std",
    "deip-transaction-ctx/std",
    "frame-benchmarking/std",
]
