[package]
authors = ["DEIP world <https://github.com/DEIPworld>"]
description = "FRAME pallet that wraps Substrate uniques"
edition = "2018"
homepage = "https://deip.world/"
license = "Apache-2.0"
name = "pallet-deip-uniques"
repository = "https://github.com/DEIPworld/deip-polkadot"
version = "3.0.0"

[dependencies]
pallet-uniques = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }