[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'RPC for DEIP Assets pallet'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'deip-assets-rpc'
repository = 'https://github.com/DEIPworld/deip-substrate'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.common_rpc]
default-features = false
package = 'common-deip-rpc'
path = "../../deip_common/deip_rpc"

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sc-rpc-api = '0.9.0'
serde = { version = "1.0.123", optional = true, features = ["derive"]}
pallet-deip-assets = { path = "../../pallets/deip_assets", default-features = false }
deip_serializable_u128 = { path = "../../deip_common/deip_serializable_u128", default-features = false }

# RPC deps:
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
sp-blockchain = { version = '3.0', default-features = false}

[dev-dependencies]
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'serde',
    'pallet-deip-assets/std',
    'deip_serializable_u128/std',
    "sp-core/std",
]
