[package]
authors = ["DEIP world <https://github.com/DEIPworld>"]
description = "RPC for DEIP Assets pallet"
edition = "2018"
homepage = "https://deip.world/"
license = "Apache-2.0"
name = "deip-assets-rpc"
repository = "https://github.com/DEIPworld/deip-substrate"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies.common_rpc]
default-features = false
package = "common-deip-rpc"
path = "../../deip_common/deip_rpc"

[dependencies]
serde = { version = "1.0.130", features = ["derive"], optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
pallet-deip-assets = { path = "../../pallets/deip_assets", default-features = false }
deip_serializable_u128 = { path = "../../deip_common/deip_serializable_u128", default-features = false }

# RPC deps:
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "common_rpc/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-deip-assets/std",
    "deip_serializable_u128/std",
    "sp-io/std",
]
