[package]
name = "deip-rpc"
version = "1.0.0"
edition = "2018"
authors = ['DEIP world <https://github.com/DEIPworld>']
repository = 'https://github.com/DEIPworld/deip-polkadot'
description = "A pallet which implements read RPC API for DEIP pallet"
license = "GPL-3.0-or-later"

[dependencies.common_rpc]
default-features = false
package = 'common-deip-rpc'
path = "../../deip_common/deip_rpc"

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
sc-rpc-api = '0.9.0'
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = { version = "1.0.119", optional = true }

# Substrate packages

sp-api = { version = '3.0', default-features = false }
sp-blockchain = { version = '3.0', default-features = false}
sp-rpc = { version = '3.0', default-features = false}
sp-runtime = { version = '3.0', default-features = false}

# local packages

pallet-deip = { version = "3.0.0", path = "../../pallets/deip", default-features = false }

[dev-dependencies]
serde_json = "1.0.64"

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "pallet-deip/std"
]
